--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-vue": "^9.6.0",
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1",
+    "sass": "^1.55.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vue-tsc": "^0.40.4"
