--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "d3": "^7.6.1",
+    "uuid": "^9.0.0",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "@vitejs/plugin-vue": "^3.1.0",
@@ -28,6 +30,6 @@
     "sass": "^1.55.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
-    "vue-tsc": "^0.40.13"
+    "vue-tsc": "1.0.8"
   }
 }
